# age-calculator-flet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Setup.md  pyproject.toml  requirements.txt
.github/workflows/: build-on-tag.yml
src/: main.py
src/utils/: image_share.py
