[project]
name = "age-calculator"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Virendra Carpenter", email = "vcarp@duck.com" }
]
dependencies = [
  "flet==0.26.0",
  "python-dateutil==2.9.0.post0",
  "pyinstaller",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.vcarp"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Age Calculator"

# company name to display in about app dialogs
company = "vcarp"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by virendra carpenter"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.26.0",
    "pyinstaller"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.26.0"}
